--- a/public/application.css
+++ b/public/application.css
@@ -1155,12 +1155,22 @@ code {
 
 .column-icon-clear {
   font-size: 1rem;
-  padding: 1rem;
+  padding: 1rem .25rem;
   position: absolute;
-  right: 3rem;
+  right: 2rem;
   top: .25em;
   cursor: pointer;
   z-index: 2;
+}
+
+.column-header + div,
+.column-icon {
+  line-height: 1;
+  margin-top: -.33rem;
+}
+
+.column-icon[title^="Clear"] {
+  margin-top: 0;
 }
 
 .icon-button {
@@ -2363,15 +2373,6 @@ button.icon-button.active i.fa-retweet {
 .column-header.active .fa {
   color: #d0d3dd;
   text-shadow: 0 0 10px rgba(0, 144, 146, 0.4);
-}
-
-.column-header + div {
-  line-height: 1em;
-  margin-top: -.25rem;
-}
-
-.column-header + div, .column-icon {
-  line-height: 1em;
 }
 
 .loading-indicator {
